# pulse-mq

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
design/: 00-架构总览.md  01-协议规范.md  02-引擎设计.md  03-安全模型.md  04-客户端SDK.md  05-运维与测试.md
docs/: api-reference.md  bench-baseline.md  bench-thresholds.md  known-issues.md  perf-100k-batched-data.md  perf-100k-batched-report.md  perf-100k-cython-data.md  perf-100k-data.md  perf-100k-json-default-data.md  perf-100k-json-default.md  perf-100k-msgspec-data.md  perf-100k-msgspec-simplified-data.md  perf-100k-pure-data.md  perf-100k-report.md  perf-comparison.md  perf-cython-optimization.md  perf-msgspec-comparison.md
docs/superpowers/plans/: 2026-06-05-phase1-skeleton.md  2026-06-06-benchmark.md  2026-06-06-publish-api-unify.md  2026-06-07-pulsemq-audit.md  2026-06-07-pulsemq-e2e-test.md  2026-06-07-pulsemq-market-data-bench.md  2026-06-07-remove-publish-batcher.md
docs/superpowers/specs/: 2026-06-05-pulsemq-implementation-design.md  2026-06-06-benchmark-design.md  2026-06-06-publish-api-simplify-design.md  2026-06-06-publish-api-unify-design.md  2026-06-07-pulsemq-audit-design.md  2026-06-07-pulsemq-e2e-test-design.md  2026-06-07-pulsemq-market-data-bench.md  2026-06-07-pulsemq-v1-optimization.md  2026-06-07-remove-publish-batcher.md  2026-06-07-zmq-io-threading.md  2026-06-08-pulsemq-v2-design.md  2026-06-09-pulsemq-e2e-test-coverage-design.md  2026-06-09-pulsemq-ui-and-startup-log-design.md
scripts/: bench_100k_with_batcher.py  bench_1m.py  bench_baseline.py  bench_burst.py  bench_concurrent.py  bench_cython_100k.py  bench_cython_df_msgpack.py  bench_live.py  bench_market.py  bench_market_data.py  bench_pubsub_matrix.py  bench_soak.py  fetch_echarts.py  test_e2e_all.py  test_publisher.py  test_server.py  test_server_runner.py  test_subscriber.py
src/pulsemq/: __init__.py  config.py  event_loop.py  models.py  publisher.py  server.py  subscriber.py
src/pulsemq/admin/: __init__.py  server.py  web_ui.py
src/pulsemq/auth/: __init__.py  memory_store.py  permission.py  zap_handler.py
src/pulsemq/cache/: __init__.py  topic_buffer.py
src/pulsemq/client/: __init__.py  async_client.py  batcher.py
src/pulsemq/engine/: __init__.py  engine.py  handlers.py  overload.py  pipeline.py  pool.py  router.py
src/pulsemq/monitoring/: __init__.py  admin_server.py  api.py  client_tracker.py  minute.py  realtime.py  web_ui.py
src/pulsemq/producers/: __init__.py  manager.py
src/pulsemq/protocol/: __init__.py  compression.py  flags.py  frames.py  msg_type.py  serialization.py
src/pulsemq/serialization/: __init__.py  _df_msgpack.pyx  _df_msgpack_loader.py  _df_msgpack_py.py  compressors.py  msgpack_ser.py  pyarrow_ser.py  raw_ser.py  registry.py
src/pulsemq/stats/: __init__.py  storage.py  traffic.py
src/pulsemq/storage/: __init__.py  database.py  interfaces.py  sqlite_perm.py  sqlite_stats.py  sqlite_user.py
src/pulsemq/transport/: __init__.py  zmq_pub.py  zmq_transport.py
tests/: __init__.py  conftest.py  test_e2e_publisher.py  test_e2e_subscriber.py  test_integration.py  test_protocol.py  test_stats.py
tests/benchmarks/: bench_handlers.py  bench_serialization.py  bench_zmq_e2e.py  conftest.py  data_generators.py
tests/integration/: test_admin_permissions.py  test_admin_server.py  test_batcher_e2e.py  test_engine_transport.py  test_full_e2e.py  test_json_e2e.py  test_monitoring_e2e.py  test_pubsub_e2e.py  test_server_lifecycle.py
tests/security/: test_sql_injection.py  test_zap_fuzz.py
tests/unit/: test_admin_server.py  test_auth.py  test_auth_memory_store.py  test_auth_permission.py  test_batch_msg_type.py  test_client.py  test_client_batcher.py  test_client_subscribe.py  test_client_tracker.py  test_compressors.py  test_config.py  test_conftest_smoke.py  test_cython_df_msgpack.py  test_engine.py  test_event_loop.py  test_flags.py  test_frames.py  test_handlers.py  test_json_serializer.py  test_models.py  test_monitoring.py  test_monitoring_api.py  test_monitoring_minute.py  test_monitoring_realtime.py  test_msg_type.py  test_overload.py  test_permission_pub_sub.py  test_pipeline.py  test_pool.py  test_protocol_flags.py  test_protocol_frames.py  test_protocol_msg_type.py  test_router.py  test_serialization.py  test_serialization_registry.py  test_sqlite_stats.py  test_storage.py  test_storage_sqlite_perm.py  test_storage_sqlite_user.py  test_topic_metrics.py  (+3 more)
