[project]
name = "pulse-mq"
version = "0.5.1"
description = "高性能金融行情消息中间件"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "haifeng" },
]
keywords = ["mq", "zmq", "pubsub", "finance", "market-data", "realtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pyzmq>=26.0",
    "msgpack>=1.0",
    "uvloop>=0.19; sys_platform != 'win32'",
    "python-snappy>=0.7",
    "lz4>=4.0",
    "zstandard>=0.22",
    "pyarrow>=14.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/haifeng/pulse-mq"
Repository = "https://github.com/haifeng/pulse-mq"
Issues = "https://github.com/haifeng/pulse-mq/issues"

[project.scripts]
pulse-mq = "pulsemq.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsemq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
