[project]
name = "pulse-mq"
version = "0.6.0"
description = "高性能金融行情消息中间件"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "haifeng" },
]
keywords = ["mq", "zmq", "pubsub", "finance", "market-data", "realtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pyzmq>=26.0",
    "msgspec>=0.18",
    "python-snappy>=0.7",
    "lz4>=4.0",
    "zstandard>=0.22",
    "pyarrow>=14.0",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/haifeng/pulse-mq"
Repository = "https://github.com/haifeng/pulse-mq"
Issues = "https://github.com/haifeng/pulse-mq/issues"

[project.scripts]
pulse-mq = "pulsemq.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsemq"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "cython>=3.2.5",
    "setuptools>=82.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
